--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>jingruoyu</title>
+    <style>
+    	html,body{
+    		width: 100%;
+    		height: 100%;
+    	}
+    	#app{
+    		width: 100%;
+    		height: 100%;
+    	}
+    </style>
   </head>
   <body>
     <div id="app"></div>
