--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>jingruoyu</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
     	html,body{
     		width: 100%;
     		height: 100%;
